--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -1,6 +1,12 @@
 * {
     box-sizing: border-box;
   }
+  
+body {
+    margin: 0;
+    height: 100%;
+  }
+
 
 
 
@@ -26,7 +32,7 @@
   
 .form-content {
     min-height: calc(100% - 80px);
-    background-color: #f7f7f7;
+    /*background-color: cornflowerblue;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,12 +43,11 @@
 .form {
     width: 65%;
     padding: 44px 60px;
-    background: #fff 0% 0% no-repeat padding-box;
+    /*background: #fff 0% 0% no-repeat padding-box;*/
     border: 1px solid #f5f5f5;
     border-radius: 8px;
     opacity: 1;
     text-align: left;
-    border-style: solid;
     border-top: #42515f;
     
 }
@@ -60,6 +65,7 @@
     width: 30px;
     border-radius: 50%;
     margin-left: 0px;
+    margin-right: 25px;
 }
 
   
@@ -67,6 +73,7 @@
     text-align: left;
     margin-left: 3cm;
     padding: 15px;
+    width: 13.7cm;
 }
 
 .input-content {
@@ -75,16 +82,22 @@
     padding: 4px;
 }
 
+error-output {
+    font-size: 18px;
+    color: red;
+    margin-left: 10px;
+  }
+
 
 select {
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
-    /*font: normal normal normal 16px Roboto;*/
+    font: normal normal normal 16px Roboto;
     letter-spacing: 0px;
-    /*color: #42515f;
-    background-color: transparent;*/
+    color: #42515f;
+    background-color: transparent;
 }
 
 .selectBox {
@@ -93,24 +106,121 @@ select {
 
 .buttonParent {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 30px;
   }
 
 
 .cancelButton {
-    text-decoration: none;
+    background-color: #e7e7e7; color: black;
+    border: 1px solid black;
+    border-radius: 4px;
+    color: black;
+    padding: 14px 40px;
     text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    
+    
 }
 
 .submitButton {
-    border: none;
-    background-color: #f5f5f5;
-    margin-right: 30px;
+    background-color: #e7e7e7; color: black;
+    border: 1px solid black;
+    border-radius: 4px;
+    color: black;
+    padding: 14px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 250px;
+    cursor: pointer;
 }
+
+
 
 .resetButton {
-
+    background-color: #e7e7e7; color: black;
+    border: 1px solid black;
+    border-radius: 4px;
+    color: black;
+    padding: 14px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-right: 200px;
+    cursor: pointer;
 }
+
+@media screen and (max-width: 800px) {
+    h1 {
+      font-size: auto;
+      text-align: center;
+    }
+    label {
+      width: auto;
+      font-size: auto;
+    }
+    body {
+      background-color: grey;
+    }
+    .form {
+        width: auto;
+        text-align: auto;
+
+
+    }
+    .row-content {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .cancelButton {
+        background-color: #e7e7e7; color: black;
+        border: 1px solid black;
+        border-radius: 4px;
+        color: black;
+        padding: 14px 40px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+        
+        
+    }
+    
+    .submitButton {
+        background-color: #e7e7e7; color: black;
+        border: 1px solid black;
+        border-radius: 4px;
+        color: black;
+        padding: 14px 40px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+    }
+    
+    
+    
+    .resetButton {
+        background-color: #e7e7e7; color: black;
+        border: 1px solid black;
+        border-radius: 4px;
+        color: black;
+        padding: 14px 40px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+    }
+}
+
+
+
 
