--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -41,14 +41,19 @@ body {
 }
   
 .form {
-    width: 65%;
-    padding: 44px 60px;
-    /*background: #fff 0% 0% no-repeat padding-box;*/
-    border: 1px solid #f5f5f5;
-    border-radius: 8px;
-    opacity: 1;
-    text-align: left;
-    border-top: #42515f;
+    width: 800px;
+    display: flex;
+    display: inline-block;
+    flex-direction: column;
+    margin-left: 100px;
+    margin-top: 100px;
+    border-style: solid;
+    
+    border-color: darkgrey;
+    padding-left: 100px;
+    padding-right: 10px;
+    padding-bottom: 50px;
+    padding-top: 50px;
     
 }
 
@@ -158,67 +163,7 @@ select {
 }
 
 @media screen and (max-width: 800px) {
-    h1 {
-      font-size: auto;
-      text-align: center;
-    }
-    label {
-      width: auto;
-      font-size: auto;
-    }
-    body {
-      background-color: grey;
-    }
-    .form {
-        width: auto;
-        text-align: auto;
-
-
-    }
-    .row-content {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .cancelButton {
-        background-color: #e7e7e7; color: black;
-        border: 1px solid black;
-        border-radius: 4px;
-        color: black;
-        padding: 14px 40px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        cursor: pointer;
-        
-        
-    }
     
-    .submitButton {
-        background-color: #e7e7e7; color: black;
-        border: 1px solid black;
-        border-radius: 4px;
-        color: black;
-        padding: 14px 40px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        cursor: pointer;
-    }
-    
-    
-    
-    .resetButton {
-        background-color: #e7e7e7; color: black;
-        border: 1px solid black;
-        border-radius: 4px;
-        color: black;
-        padding: 14px 40px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        cursor: pointer;
-    }
 }
 
 
