--- a/src/Components/Table.css
+++ b/src/Components/Table.css
@@ -23,10 +23,22 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    /*width: 80%;*/
     padding-bottom: 25px;
     margin: 0px 70px 0px;
 }
+
+#myInput {
+    background-image: url('https://www.w3schools.com/css/searchicon.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    width: 10%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 0px;
+    border-radius: 25px;
+  }
 
 
 
