Employee-Payroll-React-App

--- a/src/Components/Table.css
+++ b/src/Components/Table.css
@@ -8,6 +8,49 @@ body{
     -webkit-font-smoothing: antialiased;
     background: #F8F8F8( 71, 147, 227, 1);
 }
+.header {
+    padding: 15px 0;
+    background-color: #fff;
+}
+
+.header-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 0px solid green;
+}
+
+.logo-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 0px solid green;
+    width: 80%;
+    
+}
+
+.logo-content-img {
+    
+
+}
+
+.emp-text {
+    font: normal normal bold 20px/25px Montserrat;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 0px;
+    color: #82a70c;
+    text-transform: capitalize;
+}
+
+.emp-payroll {
+    color: #42515f;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 
 /*haader*/
 .main-content {
