--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -7,6 +7,47 @@ body {
     height: 100%;
   }
 
+  .header {
+    padding: 15px 0;
+    background-color: #fff;
+  }
+  
+  .header-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 0px solid green;
+  }
+  
+  .logo-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 0px solid green;
+    width: 80%;
+  }
+  
+  .logo-content-img {
+    border: solid 0px #42515f;
+    max-width: 20px;
+    max-height: 20px;
+  }
+  
+  .emp-text {
+    font: normal normal bold 20px/25px Montserrat;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 0px;
+    color: #82a70c;
+    text-transform: capitalize;
+  }
+  
+  .emp-payroll {
+    color: #42515f;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
 
 
 
@@ -28,32 +69,29 @@ body {
     font-size: large;
     font-weight: bold;
     margin-bottom: 0.5em;
+    text-align: left;
 }
   
 .form-content {
     min-height: calc(100% - 80px);
-    /*background-color: cornflowerblue;*/
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0px solid green;
+    border: 0px solid gray;
+    background-color: #f7f7f7;
+
   
 }
   
 .form {
-    width: 800px;
     display: flex;
     display: inline-block;
     flex-direction: column;
-    margin-left: 100px;
-    margin-top: 100px;
-    border-style: solid;
-    
-    border-color: darkgrey;
+    border-style: showdo;
+    background-color: white;
+    border-color: gray;
     padding-left: 100px;
     padding-right: 10px;
-    padding-bottom: 50px;
-    padding-top: 50px;
     
 }
 
@@ -71,6 +109,7 @@ body {
     border-radius: 50%;
     margin-left: 0px;
     margin-right: 25px;
+    cursor: pointer;
 }
 
   
@@ -103,10 +142,12 @@ select {
     letter-spacing: 0px;
     color: #42515f;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .selectBox {
     margin-left: 90px;
+    
 }
 
 .buttonParent {
